# ezmsg-ble

./: LICENSE.txt  README.md  pyproject.toml
examples/: msg.py  topic_loopback.py
src/ezmsg/ble/: client.py  server.py  topic_client.py
